--- a/index.html
+++ b/index.html
@@ -130,13 +130,10 @@
         </div>
         <div>
           <caption>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis
-            adipisci minus alias consequatur accusamus quasi molestias, maxime
-            harum quod saepe, sunt eius natus, dolor autem? Beatae tenetur
-            excepturi recusandae veritatis!
+            Ceker Mercon Tanpa Tulang! Pedesnya nampol, makannya nggak ribet! Cuma Rp 10.000 dapet 6 potong. Dijamin bikin keringetan, tapi nagih! Cocok buat ngemil, teman nasi, atau pelampiasan pas lagi bad mood.
           </caption>
           <div>
-            <a href="dokumen.pdf" download class="btn-download">Download PDF</a>
+            <a href="laporanmatupdate.pdf" download class="btn-download">Download PDF</a>
           </div>
         </div>
       </div>
@@ -147,7 +144,7 @@
       <h1>PROMOSI</h1>
       <div class="container-2">
         <video width="350" controls>
-          <source src="video.mp4" type="video/mp4" />
+          <source src="vidioupdate.mp4" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
         <img src="poster.jpg" width="350px" />
@@ -159,3 +156,4 @@
     </footer>
   </body>
 </html>
+
